--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "typescript": "^4.2.4"
   },
   "peerDependencies": {
-    "react": ">=16.8.0 <18.0.0",
-    "react-dom": ">=16.8.0 <18.0.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   }
 }
