--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "rollup -c",
     "start": "rollup -c -w",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . --ext .ts --ext .tsx"
   },
   "repository": {
     "type": "git",
@@ -37,15 +38,25 @@
   ],
   "homepage": "https://github.com/speedymorales/react-bootstrap-toggle-switch#readme",
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@types/jest": "^26.0.23",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
+    "eslint": "^7.26.0",
+    "eslint-plugin-jest": "^24.3.6",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rollup": "^2.48.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   },
   "peerDependencies": {
