--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,15 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "esModuleInterop": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "example", "rollup.config.js"]
+  "exclude": [
+    "node_modules",
+    "src/**/*.test.tsx",
+    "dist",
+    "example",
+    "rollup.config.js"
+  ]
 }
